# fastapi_template

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  mkdocs.yml  pyproject.toml  setup.py
.cursor/rules/: fastapi-developper-guidelines.mdc  fastapi-enterprise-rules.mdc
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: health.py  postal_codes.py  users.py
app/core/: config.py  logging.py  security.py
app/crud/: __init__.py  postal_code.py  user.py
app/db/: base.py  base_class.py
app/models/: __init__.py  postal_code.py  user.py
migrations/: env.py
migrations/versions/: 0001_initial_user_table.py  bb20d7236d61_add_postal_codes_table_and_user_fields.py
scripts/: init-db.sql  seed_postal_codes.py  test-docker-setup.py
tests/: conftest.py  test_main.py
